# Logan

./: Cargo.toml  LICENSE  README.md  install.sh
src/: app.rs  main.rs
src/model/: log_entry.rs
src/parser/: json_parser.rs  mod.rs  text_parser.rs
src/source/: file_source.rs  mod.rs
src/tui/: events.rs  ui.rs
