[package]
name = "logan"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Ogwenya/Logan"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = {version= "1", features=["derive"]}
serde_json = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
